[project]
name = "ip-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "VinylStage",email = "mcpe9869@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi (>=2025.1.31,<2026.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "idna (>=3.10,<4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
